kubernetes/kube-prod-d1/lldap/prod-d1/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ldaps-route
  namespace: lldap
spec:
  entryPoints:
    - ldaps
  routes:
    - match: HostSNI(`lldap.kube-prod-d1.mclacken.net`)
      services:
        - name: lldap-service
          port: 3890 
  tls:
    passthrough: false
    secretName: lldap-certificate-secret  # Cert from cert-manager
